# TiCoder

./: .gitignore  pyproject.toml
scripts/: gpt4.1-mini.sh  test.sh
src/: main.py
